--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
         run: |
           mkdir bin
           g++ ./src/*.cpp -O3 -o bin/bf
+          g++ ./src/*.cpp -O3 -o bin/bfdbg -DBF_DEBUG
       - uses: actions/upload-artifact@v4
         with:
           name: bf-ubuntu
@@ -31,6 +32,7 @@ jobs:
         run: |
           mkdir bin
           g++.exe ./src/*.cpp -O3 -o bin/bf.exe
+          g++.exe ./src/*.cpp -O3 -o bin/bfdbg.exe -DBF_DEBUG
       - uses: actions/upload-artifact@v4
         with:
           name: bf-windows
