--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.cache
 .vscode
 test*
 *.exe
@@ -5,4 +6,10 @@ cleaned.*
 bin/
 build/
 *.pyd
+*.so
 __pycache__
+CMakeFiles/
+cmake_install.cmake
+CMakeCache.txt
+Makefile
+compile_commands.json
