--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
 .cache
 .vscode
-test*
-*.exe
-cleaned.*
+
 bin/
 build/
-*.pyd
-*.so
-__pycache__
+
 CMakeFiles/
 cmake_install.cmake
 CMakeCache.txt
 Makefile
 compile_commands.json
+.clangd
+
+*.pyd
+*.so
+__pycache__
+test*
+cleaned.*
