--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,11 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 aux_source_directory(src SRC_LIST)
 
 add_executable(bf ${SRC_LIST})
+target_include_directories(bf PUBLIC include)
 
 add_executable(bfdbg ${SRC_LIST})
 target_compile_definitions(bfdbg PRIVATE BF_DEBUG)
-
-target_include_directories(bf PUBLIC src)
-target_include_directories(bfdbg PUBLIC src)
+target_include_directories(bfdbg PUBLIC include)
 
 add_custom_target(
     python_module ALL
